--- a/index.html
+++ b/index.html
@@ -46,6 +46,56 @@
     </header>
 
     <div class="container">
+        <div class="articles">
+            <h2>Derniers articles</h2>
+        </div>
+        <div class="row">
+            <div class="col-12 suzette-img">
+                <img src="./img/articles/suzette/suzette-small.jpg" class="img-fluid" alt="crepes">
+            </div>
+            <div class="col-12 titre-articles">
+                <h4>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h4>
+            </div>
+            <div class="col-12 texte-articles">
+                <span>La franchise "Chez Suzette" qui fait un carton chez les bretons ouvre son premier 
+                    restaurant à Paris dans le quartier latin. Antoine de Cui'zine a testé pour vous les 
+                    saveurs sucrés, salés au froment ou au sarrazin!</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 metro-img">
+                <img src="./img/articles/metro/metro-small.jpg" class="img-fluid" alt="tarte aux framboises">
+            </div>
+            <div class="col-12 titre-articles">
+                <h4>Le Métro dessert</h4>
+            </div>
+            <div class="col-12 texte-articles">
+                <span>Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont 
+                    décidé de réunir leur deux passions dans un restaurant à la déco inspiré du métro parisien. 
+                    A voir absolument, mais qu'en est-il d'y aller pour manger ? Clémentine entre 
+                    en gare et nous donne son avis</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 vitaly-img">
+                <img src="./img/articles/vitaly/vitaly-small.jpg" class="img-fluid" alt="salade de pates">
+            </div>
+            <div class="col-12 titre-articles">
+                <h4>Vitaly, le végan italien</h4>
+            </div>
+            <div class="col-12 texte-articles">
+                <span>Quand on pense italien, 
+                    on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de 
+                    l'Italie à portée des herbivores. Cette fois, c'est moi Tony qui
+                     vais le tester pour vous.</span>
+            </div>
+        </div>
+        <div>
+            <div class="col-12 lien-autres">
+                <a href="">⥷ Voir les articles précédents</a>
+            </div>
+        </div>
+    </div>
 
     </div>
 
