--- a/index.html
+++ b/index.html
@@ -7,43 +7,48 @@
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/css-homage.css">
     <link rel="stylesheet" href="./css/css-main.css">
+    <script src="https://kit.fontawesome.com/ec3b3b1994.js" crossorigin="anonymous"></script>
     <title>Cui'zine</title>
 </head>
 
 <body>
+
     <header class="container-header">
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            <a class="navbar-brand" href="#">Cui'zine</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="bg-opacite">
+            <nav class="navbar navbar-expand-lg navbar-dark ">
+                <a class="navbar-brand" href="#">Cui'zine</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Equipe</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div class="logo-titre">
-            <div class="text-center">
-                <img src="./img/logo_square_white.png" class="img-fluid logo-white" alt="Responsive image">
-            </div>
-            <div class="titre">
-                <h1>Cui'zine</h1>
-                <span id="mag-cuisine">Le mag cuisine</span>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Equipe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="logo-titre">
+                <div class="text-center">
+                    <img src="./img/logo_square_white.png" class="img-fluid logo-white" alt="Responsive image">
+                </div>
+                <div class="titre">
+                    <h1>Cui'zine</h1>
+                    <span id="mag-cuisine">Le mag cuisine</span>
+                </div>
             </div>
         </div>
     </header>
+
 
     <div class="container">
         <div class="articles">
@@ -92,12 +97,75 @@
         </div>
         <div>
             <div class="col-12 lien-autres">
-                <a href="">⥷ Voir les articles précédents</a>
+                <a class="articles-precedents" href="">⥷ Voir les articles précédents</a>
             </div>
         </div>
     </div>
 
-    </div>
+    <div class="footer">
+        <div class="row">
+            <div class="col-12 categories">
+                <h4 class="col-12">Catégories</h4>
+            </div>
+            <div class="col-12">
+                <ul class="col-12 liens-footer">
+                    <li>
+                        <a href="">Revues</a>
+                    </li>
+                    <li>
+                        <a href="">Recettes</a>
+                    </li>
+                    <li>
+                        <a href="">Découvertes</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 archives">
+                <h4 class="col-12">Archives</h4>
+            </div>
+            <div class="col-12">
+                <ul class="col-12 liens-footer">
+                    <li>
+                        <a href="">2019</a>
+                    </li>
+                    <li>
+                        <a href="">2018</a>
+                    </li>
+                    <li>
+                        <a href="">2017</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 newsletter">
+                <h6 class="col-12">Newsletter</h6>
+            </div>
+            <div class="col-12">
+                <form class="form-inline col-12" action="newsletter">
+                    <label for="email"></label>
+                    <input type="email" placeholder="email" size="15">
+                    <button type="submit" class="btn btn-sm btn-default">S'inscrire</button>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 partager">
+                <h6 class="col-12">Partager</h6>
+            </div>
+            <div class="col-8 icones">
+                <ul class="col-8" id="icones-liens">
+                    <li>
+                        <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
 
 
@@ -107,8 +175,8 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 
 </html>
