--- a/index.html
+++ b/index.html
@@ -54,42 +54,37 @@
         <div class="articles">
             <h2>Derniers articles</h2>
         </div>
-        <div class="row">
-            <div class="col-12 suzette-img">
+        <div class="row art">
+            <div class="col-12 col-lg-3 suzette-img">
                 <img src="./img/articles/suzette/suzette-small.jpg" class="img-fluid" alt="crepes">
             </div>
-            <div class="col-12 titre-articles">
+            <div class="col-12 col-lg-7 titre-articles">
                 <h4>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h4>
-            </div>
-            <div class="col-12 texte-articles">
-                <span>La franchise "Chez Suzette" qui fait un carton chez les bretons ouvre son premier 
+                <span class="texte-articles">La franchise "Chez Suzette" qui fait un carton chez les bretons ouvre son premier 
                     restaurant à Paris dans le quartier latin. Antoine de Cui'zine a testé pour vous les 
                     saveurs sucrés, salés au froment ou au sarrazin!</span>
             </div>
+
         </div>
-        <div class="row">
-            <div class="col-12 metro-img">
+        <div class="row art">
+            <div class="col-12 col-lg-3 metro-img">
                 <img src="./img/articles/metro/metro-small.jpg" class="img-fluid" alt="tarte aux framboises">
             </div>
-            <div class="col-12 titre-articles">
+            <div class="col-12 col-lg-7 titre-articles">
                 <h4>Le Métro dessert</h4>
-            </div>
-            <div class="col-12 texte-articles">
-                <span>Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont 
+                <span class="texte-articles">Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont 
                     décidé de réunir leur deux passions dans un restaurant à la déco inspiré du métro parisien. 
                     A voir absolument, mais qu'en est-il d'y aller pour manger ? Clémentine entre 
                     en gare et nous donne son avis</span>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 vitaly-img">
+        <div class="row art">
+            <div class="col-12 col-lg-3 vitaly-img">
                 <img src="./img/articles/vitaly/vitaly-small.jpg" class="img-fluid" alt="salade de pates">
             </div>
-            <div class="col-12 titre-articles">
+            <div class="col-12 col-lg-7 titre-articles">
                 <h4>Vitaly, le végan italien</h4>
-            </div>
-            <div class="col-12 texte-articles">
-                <span>Quand on pense italien, 
+                <span class="texte-articles">Quand on pense italien, 
                     on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de 
                     l'Italie à portée des herbivores. Cette fois, c'est moi Tony qui
                      vais le tester pour vous.</span>
@@ -103,69 +98,78 @@
     </div>
 
     <div class="footer">
-        <div class="row">
-            <div class="col-12 categories">
-                <h4 class="col-12">Catégories</h4>
+        <div class="large col-lg-4">
+            <div class="row">
+                <div class="col-12 categories">
+                    <h4 class="col-12">Catégories</h4>
+                </div>
+                <div class="col-12">
+                    <ul class="col-12 liens-footer">
+                        <li>
+                            <a href="">Revues</a>
+                        </li>
+                        <li>
+                            <a href="">Recettes</a>
+                        </li>
+                        <li>
+                            <a href="">Découvertes</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-12">
-                <ul class="col-12 liens-footer">
-                    <li>
-                        <a href="">Revues</a>
-                    </li>
-                    <li>
-                        <a href="">Recettes</a>
-                    </li>
-                    <li>
-                        <a href="">Découvertes</a>
-                    </li>
-                </ul>
+            <div class="row">
+                <div class="col-12 archives">
+                    <h4 class="col-12">Archives</h4>
+                </div>
+                <div class="col-12">
+                    <ul class="col-12 liens-footer">
+                        <li>
+                            <a href="">2019</a>
+                        </li>
+                        <li>
+                            <a href="">2018</a>
+                        </li>
+                        <li>
+                            <a href="">2017</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 newsletter">
+                    <h6 class="col-12">Newsletter</h6>
+                </div>
+                <div class="col-12">
+                    <form class="form-inline col-12" action="newsletter">
+                        <label for="email"></label>
+                        <input type="email" placeholder="email" size="15">
+                        <button type="submit" class="btn btn-sm btn-default">S'inscrire</button>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 partager">
+                    <h6 class="col-12">Partager</h6>
+                </div>
+                <div class="col-12 icones">
+                    <ul class="col-2" id="icones-liens">
+                        <li class="inline">
+                            <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                        </li>
+                        <li class="inline">
+                            <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li class="inline">
+                            <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-youtube"></i></a>
+                        </li>
+                        <li class="inline">
+                            <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-twitter"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 archives">
-                <h4 class="col-12">Archives</h4>
-            </div>
-            <div class="col-12">
-                <ul class="col-12 liens-footer">
-                    <li>
-                        <a href="">2019</a>
-                    </li>
-                    <li>
-                        <a href="">2018</a>
-                    </li>
-                    <li>
-                        <a href="">2017</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 newsletter">
-                <h6 class="col-12">Newsletter</h6>
-            </div>
-            <div class="col-12">
-                <form class="form-inline col-12" action="newsletter">
-                    <label for="email"></label>
-                    <input type="email" placeholder="email" size="15">
-                    <button type="submit" class="btn btn-sm btn-default">S'inscrire</button>
-                </form>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 partager">
-                <h6 class="col-12">Partager</h6>
-            </div>
-            <div class="col-8 icones">
-                <ul class="col-8" id="icones-liens">
-                    <li>
-                        <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                    </li>
-                    <li>
-                        <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-instagram"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    </div>
 
 
 
@@ -173,10 +177,8 @@
 
 
 
-
-
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 
 </html>
