--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="col-12 col-lg-3 suzette-img">
                 <img src="./img/articles/suzette/suzette-small.jpg" class="img-fluid" alt="crepes">
             </div>
-            <div class="col-12 col-lg-7 titre-articles">
+            <div class="col-12 col-lg-5 titre-articles">
                 <h4>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h4>
                 <span class="texte-articles">La franchise "Chez Suzette" qui fait un carton chez les bretons ouvre son premier 
                     restaurant à Paris dans le quartier latin. Antoine de Cui'zine a testé pour vous les 
@@ -70,7 +70,7 @@
             <div class="col-12 col-lg-3 metro-img">
                 <img src="./img/articles/metro/metro-small.jpg" class="img-fluid" alt="tarte aux framboises">
             </div>
-            <div class="col-12 col-lg-7 titre-articles">
+            <div class="col-12 col-lg-5 titre-articles">
                 <h4>Le Métro dessert</h4>
                 <span class="texte-articles">Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont 
                     décidé de réunir leur deux passions dans un restaurant à la déco inspiré du métro parisien. 
@@ -82,7 +82,7 @@
             <div class="col-12 col-lg-3 vitaly-img">
                 <img src="./img/articles/vitaly/vitaly-small.jpg" class="img-fluid" alt="salade de pates">
             </div>
-            <div class="col-12 col-lg-7 titre-articles">
+            <div class="col-12 col-lg-5 titre-articles">
                 <h4>Vitaly, le végan italien</h4>
                 <span class="texte-articles">Quand on pense italien, 
                     on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de 
@@ -98,76 +98,72 @@
     </div>
 
     <div class="footer">
-        <div class="large col-lg-4">
+        <div class="large col-lg-12">
             <div class="row">
-                <div class="col-12 categories">
+                <div class="col-12 col-lg-4 categories">
                     <h4 class="col-12">Catégories</h4>
+
+                    <div class="col-12">
+                        <ul class="col-12 liens-footer">
+                            <li>
+                                <a href="">Revues</a>
+                            </li>
+                            <li>
+                                <a href="">Recettes</a>
+                            </li>
+                            <li>
+                                <a href="">Découvertes</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-12">
-                    <ul class="col-12 liens-footer">
-                        <li>
-                            <a href="">Revues</a>
-                        </li>
-                        <li>
-                            <a href="">Recettes</a>
-                        </li>
-                        <li>
-                            <a href="">Découvertes</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 archives">
+                <div class="col-12  col-lg-4 archives">
                     <h4 class="col-12">Archives</h4>
+                    <div class="col-12">
+                        <ul class="col-12 liens-footer">
+                            <li>
+                                <a href="">2019</a>
+                            </li>
+                            <li>
+                                <a href="">2018</a>
+                            </li>
+                            <li>
+                                <a href="">2017</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-12">
-                    <ul class="col-12 liens-footer">
-                        <li>
-                            <a href="">2019</a>
-                        </li>
-                        <li>
-                            <a href="">2018</a>
-                        </li>
-                        <li>
-                            <a href="">2017</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 newsletter">
+                <div class="col-12 col-lg-4 newsletter">
                     <h6 class="col-12">Newsletter</h6>
-                </div>
-                <div class="col-12">
-                    <form class="form-inline col-12" action="newsletter">
-                        <label for="email"></label>
-                        <input type="email" placeholder="email" size="15">
-                        <button type="submit" class="btn btn-sm btn-default">S'inscrire</button>
-                    </form>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 partager">
-                    <h6 class="col-12">Partager</h6>
-                </div>
-                <div class="col-12 icones">
-                    <ul class="col-2" id="icones-liens">
-                        <li class="inline">
-                            <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                        </li>
-                        <li class="inline">
-                            <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li class="inline">
-                            <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-youtube"></i></a>
-                        </li>
-                        <li class="inline">
-                            <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-twitter"></i></a>
-                        </li>
-                    </ul>
+                    <div class="col-12">
+                        <form class="form-inline col-12" action="newsletter">
+                            <label for="email"></label>
+                            <input type="email" placeholder="email" size="15">
+                            <button type="submit" class="btn btn-sm btn-default">S'inscrire</button>
+                        </form>
+                    </div>
+                    <div class="col-12 partager">
+                        <h6 class="col-12">Partager</h6>
+                    </div>
+                    <div class="col-12 icones">
+                        <ul class="col-2" id="icones-liens">
+                            <li class="inline">
+                                <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                            </li>
+                            <li class="inline">
+                                <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-instagram"></i></a>
+                            </li>
+                            <li class="inline">
+                                <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-youtube"></i></a>
+                            </li>
+                            <li class="inline">
+                                <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-twitter"></i></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
 
