--- a/index.html
+++ b/index.html
@@ -51,39 +51,50 @@
 
 
     <div class="container">
+        <!-- -->
         <div class="articles">
             <h2>Derniers articles</h2>
         </div>
-        <div class="row art">
-            <div class="col-12 col-lg-3 suzette-img">
-                <img src="./img/articles/suzette/suzette-small.jpg" class="img-fluid" alt="crepes">
-            </div>
-            <div class="col-12 col-lg-5 titre-articles">
-                <h4>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h4>
-                <span class="texte-articles">La franchise "Chez Suzette" qui fait un carton chez les bretons ouvre son premier 
+        <div class="row">
+            <div class=" col-12 col-lg-8">
+                <div class="row art">
+                    <div class="col-12 col-lg-5 suzette-img">
+                        <img src="./img/articles/suzette/suzette-small.jpg" class="img-fluid" alt="crepes">
+                    </div>
+                    <div class="col-12 col-lg-7 titre-articles">
+                        <h4>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h4>
+                        <span class="texte-articles">La franchise "Chez Suzette" qui fait un carton chez les bretons ouvre son premier 
                     restaurant à Paris dans le quartier latin. Antoine de Cui'zine a testé pour vous les 
                     saveurs sucrés, salés au froment ou au sarrazin!</span>
-            </div>
+                    </div>
 
-        </div>
-        <div class="row art">
-            <div class="col-12 col-lg-3 metro-img">
-                <img src="./img/articles/metro/metro-small.jpg" class="img-fluid" alt="tarte aux framboises">
-            </div>
-            <div class="col-12 col-lg-5 titre-articles">
-                <h4>Le Métro dessert</h4>
-                <span class="texte-articles">Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont 
+                </div>
+                <div class="row art">
+                    <div class="col-12 col-lg-5 metro-img">
+                        <img src="./img/articles/metro/metro-small.jpg" class="img-fluid" alt="tarte aux framboises">
+                    </div>
+                    <div class="col-12 col-lg-7 titre-articles">
+                        <h4>Le Métro dessert</h4>
+                        <span class="texte-articles">Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont 
                     décidé de réunir leur deux passions dans un restaurant à la déco inspiré du métro parisien. 
                     A voir absolument, mais qu'en est-il d'y aller pour manger ? Clémentine entre 
                     en gare et nous donne son avis</span>
+                    </div>
+                </div>
+                <div class="row art">
+                    <div class="col-12 col-lg-5 vitaly-img">
+                        <img src="./img/articles/vitaly/vitaly-small.jpg" class="img-fluid" alt="salade de pates">
+                    </div>
+                    <div class="col-12 col-lg-7 titre-articles">
+                        <h4>Vitaly, le végan italien</h4>
+                        <span class="texte-articles">Quand on pense italien, 
+                    on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de 
+                    l'Italie à portée des herbivores. Cette fois, c'est moi Tony qui
+                     vais le tester pour vous.</span>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="row art">
-            <div class="col-12 col-lg-3 vitaly-img">
-                <img src="./img/articles/vitaly/vitaly-small.jpg" class="img-fluid" alt="salade de pates">
-            </div>
-            <div class="col-12 col-lg-5 titre-articles">
-                <h4>Vitaly, le végan italien</h4>
+            <div class="tool-right ds-sm-none col-lg-4">
                 <span class="texte-articles">Quand on pense italien, 
                     on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de 
                     l'Italie à portée des herbivores. Cette fois, c'est moi Tony qui
@@ -99,12 +110,12 @@
 
     <div class="footer">
         <div class="large col-lg-12">
-            <div class="row">
-                <div class="col-12 col-lg-4 categories">
-                    <h4 class="col-12">Catégories</h4>
+            <div class="row  justify-content-lg-around">
+                <div class="col-lg-4 categories">
+                    <h4>Catégories</h4>
 
-                    <div class="col-12">
-                        <ul class="col-12 liens-footer">
+                    <div>
+                        <ul class="liens-footer">
                             <li>
                                 <a href="">Revues</a>
                             </li>
@@ -117,10 +128,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12  col-lg-4 archives">
-                    <h4 class="col-12">Archives</h4>
-                    <div class="col-12">
-                        <ul class="col-12 liens-footer">
+                <div class="col-lg-4 archives">
+                    <h4>Archives</h4>
+                    <div>
+                        <ul class="liens-footer">
                             <li>
                                 <a href="">2019</a>
                             </li>
@@ -133,20 +144,20 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4 newsletter">
-                    <h6 class="col-12">Newsletter</h6>
-                    <div class="col-12">
-                        <form class="form-inline col-12" action="newsletter">
+                <div class="col-lg-4 newsletter">
+                    <h6>Newsletter</h6>
+                    <div>
+                        <form class="form-inline" action="newsletter">
                             <label for="email"></label>
                             <input type="email" placeholder="email" size="15">
                             <button type="submit" class="btn btn-sm btn-default">S'inscrire</button>
                         </form>
                     </div>
-                    <div class="col-12 partager">
-                        <h6 class="col-12">Partager</h6>
+                    <div class="partager">
+                        <h6>Partager</h6>
                     </div>
-                    <div class="col-12 icones">
-                        <ul class="col-2" id="icones-liens">
+                    <div class="icones">
+                        <ul id="icones-liens">
                             <li class="inline">
                                 <a href="https://www.konexio.eu" target="_blank"><i class="fab fa-facebook-square"></i></a>
                             </li>
